model fixes, db fixes, serialization fixes
